kubectl/monitoring/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  rules:
  - host: grafana.k8s.cwienczek.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
  tls:
  - secretName: grafana-server-tls
    hosts:
      - grafana.k8s.cwienczek.com
